@@ -1,18 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX sleuthkit-3.2.3-system-sqlite.patch 623 RMD160 7483338ca75b63035833985a4182840df0794a70 SHA1 7b49a87bb43050139f0ff3c6bb28e74cda44e4f9 SHA256 c896f9e9cfb931710e5b27758acdde5d592caf8c9cb472815d4ba6741526bd1d
 AUX sleuthkit-3.2.3-tools-shared-libs.patch 1685 RMD160 4f10f26a104c5191db2e8d394ebdd540d613c969 SHA1 712fb67f1291722a2f49c37f93f329313084c2a4 SHA256 1126fa5b95cfa090426576b5e04a3b1a3814b63f0196f5216157929133ba6ec6
-DIST sleuthkit-3.2.1.tar.gz 2033920 RMD160 d20a6e46da9aef30117f93a24701a18c5d513626 SHA1 07966f3b95e00569d0df826fa713b8272b272bf6 SHA256 e0f257d2c6856dc1c1cd2a704c6cb8906ca688f0cdbb1d0665fd7a5a2f83ad37
 DIST sleuthkit-3.2.3.tar.gz 2039699 RMD160 ee9849ff34bd7d1ce90819f22f1e09a71e4d0e8c SHA1 85d100ffde54f051916a4ea9452563ff85fad4ac SHA256 ba5f63d7fd60d978de03777c72b1571004caa8dfe384f09757b6a8efa890ea62
-EBUILD sleuthkit-3.2.1.ebuild 752 RMD160 bcb524fb80f49e47b8893a4c04360e9c628b63c4 SHA1 1f655e96cc9afefb3b11fd22ca74fe8709e01e8d SHA256 78e11f8a2c923f98894e211d3b0cadd2cb28b88f1c3711be2ccd6fb1a1688263
 EBUILD sleuthkit-3.2.3.ebuild 993 RMD160 eb1d084a423dff52a67a787af1fb9193a6c22a45 SHA1 b336792689962386a4ed55df30a3cb320eb90e89 SHA256 13c5937a9a90da0e52ca52e90c370c5edfa4316d7a47b7f91ab2e0f9fa478e25
-MISC ChangeLog 10444 RMD160 fcc5c7630176a730e16250c66a16dd79a1f5060a SHA1 9ba89ff750162591d09ebb1b3ca13ac641dd50b4 SHA256 a57fea10917e328412f770877b98512ead25e2807a858c60a82d1e12a195941a
+MISC ChangeLog 10539 RMD160 c5f9d7fee4b22d9f8327f869ab8cb23adf02368f SHA1 34465ca13c667d3979f6af5f6bebb3f52debb833 SHA256 5865edfe0780f27d8da29e9be16486a235efa6959e659de3b4d6f2021d24d343
 MISC metadata.xml 274 RMD160 4f530e9edd6fa93303af021d0ded55757634a8fe SHA1 cea8caed09ef9c67e3c0804f6a8e68a9a828d3e0 SHA256 ae9a998403a0a710e265ddd4a6bf163170c572122d18edbf1c923318cd988dcb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk/zUusACgkQVWmRsqeSphMspACfXWW3ICJMHoMnItf87VieQY+v
-kt8An1LMwTyQfrz/MaxaiX8rLJ8FgkMB
-=Xx/x
+iQEbBAEBCgAGBQJP81Q0AAoJEEqz6FtPBkyjtCcH+NBY/6nlaMsAAycz1la5kcsL
+MGVjoLGsFxNniHzfgN4QinEJIiVjZQlHOHh5WbG6dTkAMr+toOe8cH6vJaqdkGSx
+aum5kz03eIdJq4gzZSmUZURyyMZFYVOCKK8OJq9xFJWWJ3urKQl0VB0iaxETskvm
+64CHb6JSFisHWD3eKcagzH+mt/5ALzDRAoJ6esW3GWBwUDIL4r8OYckROr89Vc62
+Gvt4EBddFlW/44/+NOtr2k0boUkkDQvTulCwKORm4PeeiOa71RWTbBEgLirSEBtG
+Faianv+PtfJDubTzq0Mr3QmKd9T9jfc8EjE5/4L50zdhbOonsb/hZNsAgaWvLg==
+=PsZE
 -----END PGP SIGNATURE-----
